--- a/notification.html
+++ b/notification.html
@@ -58,6 +58,7 @@
   <h1> 
    * We had a server breakdown, kindly bear with us as it will always be updated every 2days
   </h1>
+  <h1>*Hello Phil your Product is on board! Thanks for your patience</h1>
    
   
  
