--- a/notification.html
+++ b/notification.html
@@ -59,6 +59,7 @@
    * We had a server breakdown, kindly bear with us as it will always be updated every 2days
   </h1>
   <h1>*Hello Phil your Product is on board! Thanks for your patience</h1>
+  <h1>*wishing you a happy new month and happy new week</h1>
    
   
  
